Generic Issue > iOS > Text in search field appear overlapped when user switch to grid view #7487

--- a/public/less/sections/orders.less
+++ b/public/less/sections/orders.less
@@ -5,6 +5,9 @@
 .orders {
     .column-width {
       width: 12.5%;
+        @media (max-width: 767px) {
+            width: 50% !important;
+        }
     }
     table.grid thead th {
         float:left;
